# proto

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml
naudata/: README.md  types.proto
naudata/admin/auth/: requests.proto  service.proto  types.proto
naudata/admin/basic/: requests.proto  service.proto  types.proto
naudata/auth/: README.md  requests.proto  service.proto  types.proto
naudata/lists/: README.md  requests.proto  service.proto  types.proto
naudata/name/: README.md  requests.proto  service.proto  types.proto
naudata/schedules/: README.md  requests.proto  service.proto  types.proto
